(lang dune 3.15)

(name miniverse)

(generate_opam_files true)

(source
 (github jeromesimeon/miniverse))

(authors "Jerome Simeon")

(maintainers "Jerome Simeon")

(license LICENSE)

(package
 (name miniverse)
 (synopsis "A little bit of verse")
 (description "But not a lot")
 (depends ocaml dune fmt)
 (tags
  (topics "to describe" your project)))
